# news_paerser_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture_and_plan (2).md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/common/: config.py  database.py  redis.py
app/models/: news.py
app/repositories/: base.py  news.py
app/routers/: news.py  ws.py
app/schemas/: news.py
app/services/: __init__.py  enrichment.py  news_pipeline.py  telegram_scraper.py  telegram_userbot.py  telegram_userbot_telethon.py  truth_scraper.py
app/static/: app.css  app.js  index.html
scripts/: parse_tasnim_latest.py  telegram_login.py  telegram_qr_login.py  telethon_login.py  telethon_qr_login.py  test_telegram_channels.py  test_telethon_channels.py
