[project]
name = "news-parser-api"
version = "0.1.0"
description = "Backend API and background workers for news scraping."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "deep-translator>=1.11.4",
    "groq>=0.9.0",
    "langdetect>=1.0.9",
    "mastodon.py>=1.8.1",
    "orjson>=3.10.0",
    "pydantic-settings>=2.4.0",
    "pyrogram>=2.0.106",
    "qrcode>=8.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "telethon>=1.36.0",
    "tgcrypto>=1.2.5",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
